# RT

./: .gitignore  CMakeLists.txt  main.cpp
include/: CApp.h  camera.hpp  gtfm.hpp  image.hpp  lightBase.hpp  objectBase.hpp  objectSphere.hpp  pointLight.hpp  ray.hpp  scene.hpp
note/: note.md
src/: CApp.cpp  camera.cpp  gtfm.cpp  image.cpp  lightBase.cpp  main.cpp  objectBase.cpp  objectSphere.cpp  pointLight.cpp  ray.cpp  scene.cpp
